Collapsing delete button on mobile views to only show icon (fixed overflow of screen width)

--- a/frontend/src/app/toolbar/toolbar.component.scss
+++ b/frontend/src/app/toolbar/toolbar.component.scss
@@ -12,6 +12,12 @@
   @media (max-width: 600px) {
     padding: 0 0 0 6px;
   }
+
+  @media (max-width: 400px) {
+    .button.danger span {
+      display: none;
+    }
+  }
 }
 
 .toolbar-group {
